put produce annotation on class level